--- a/_modules/pygef/cpt.html
+++ b/_modules/pygef/cpt.html
@@ -81,21 +81,11 @@
 <span class="kn">import</span> <span class="nn">pprint</span>
 <span class="kn">from</span> <span class="nn">dataclasses</span> <span class="kn">import</span> <span class="n">dataclass</span><span class="p">,</span> <span class="n">field</span>
 <span class="kn">from</span> <span class="nn">datetime</span> <span class="kn">import</span> <span class="n">date</span>
-<span class="kn">from</span> <span class="nn">enum</span> <span class="kn">import</span> <span class="n">Enum</span>
 <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">List</span>
 
 <span class="kn">import</span> <span class="nn">polars</span> <span class="k">as</span> <span class="nn">pl</span>
 
 <span class="kn">from</span> <span class="nn">pygef.common</span> <span class="kn">import</span> <span class="n">Location</span><span class="p">,</span> <span class="n">VerticalDatumClass</span><span class="p">,</span> <span class="n">depth_to_offset</span>
-
-
-<span class="k">class</span> <span class="nc">QualityClass</span><span class="p">(</span><span class="n">Enum</span><span class="p">):</span>
-    <span class="n">Unknown</span> <span class="o">=</span> <span class="o">-</span><span class="mi">1</span>
-    <span class="n">Class0</span> <span class="o">=</span> <span class="mi">0</span>
-    <span class="n">Class1</span> <span class="o">=</span> <span class="mi">1</span>
-    <span class="n">Class2</span> <span class="o">=</span> <span class="mi">2</span>
-    <span class="n">Class3</span> <span class="o">=</span> <span class="mi">3</span>
-    <span class="n">Class4</span> <span class="o">=</span> <span class="mi">4</span>
 
 
 <div class="viewcode-block" id="CPTData">
@@ -116,7 +106,7 @@
 <span class="sd">        delivered_vertical_position_reference_point (str): delivered vertical position reference point</span>
 <span class="sd">        cpt_standard (str | None): cpt standard</span>
 <span class="sd">        dissipationtest_performed (bool | None): dissipationtest performed</span>
-<span class="sd">        quality_class (QualityClass): quality class</span>
+<span class="sd">        quality_class (int | None): quality class. None if the value in the source file was invalid or missing.</span>
 <span class="sd">        predrilled_depth (float): predrilled depth</span>
 <span class="sd">        final_depth (float): final depth</span>
 <span class="sd">        groundwater_level (float | None): groundwater level</span>
@@ -194,7 +184,7 @@
     <span class="n">standardized_location</span><span class="p">:</span> <span class="n">Location</span> <span class="o">|</span> <span class="kc">None</span>
     <span class="c1"># conepenetrometersurvey</span>
     <span class="n">dissipationtest_performed</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">|</span> <span class="kc">None</span>
-    <span class="n">quality_class</span><span class="p">:</span> <span class="n">QualityClass</span>
+    <span class="n">quality_class</span><span class="p">:</span> <span class="nb">int</span> <span class="o">|</span> <span class="kc">None</span>
     <span class="n">predrilled_depth</span><span class="p">:</span> <span class="nb">float</span>
     <span class="n">final_depth</span><span class="p">:</span> <span class="nb">float</span>
     <span class="n">groundwater_level</span><span class="p">:</span> <span class="nb">float</span> <span class="o">|</span> <span class="kc">None</span>
