--- a/_modules/pygef/shim.html
+++ b/_modules/pygef/shim.html
@@ -86,7 +86,7 @@
 <span class="kn">from</span> <span class="nn">pygef.broxml.parse_bore</span> <span class="kn">import</span> <span class="n">read_bore</span> <span class="k">as</span> <span class="n">read_bore_xml</span>
 <span class="kn">from</span> <span class="nn">pygef.broxml.parse_cpt</span> <span class="kn">import</span> <span class="n">read_cpt</span> <span class="k">as</span> <span class="n">read_cpt_xml</span>
 <span class="kn">from</span> <span class="nn">pygef.common</span> <span class="kn">import</span> <span class="n">Location</span><span class="p">,</span> <span class="n">VerticalDatumClass</span>
-<span class="kn">from</span> <span class="nn">pygef.cpt</span> <span class="kn">import</span> <span class="n">CPTData</span><span class="p">,</span> <span class="n">QualityClass</span>
+<span class="kn">from</span> <span class="nn">pygef.cpt</span> <span class="kn">import</span> <span class="n">CPTData</span>
 <span class="kn">from</span> <span class="nn">pygef.gef.parse_bore</span> <span class="kn">import</span> <span class="n">_GefBore</span>
 <span class="kn">from</span> <span class="nn">pygef.gef.parse_cpt</span> <span class="kn">import</span> <span class="n">_GefCpt</span>
 
@@ -192,7 +192,7 @@
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;cpt_standard&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;groundwater_level&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">gef_cpt</span><span class="o">.</span><span class="n">groundwater_level</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;dissipationtest_performed&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
-    <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;quality_class&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">QualityClass</span><span class="p">(</span><span class="n">gef_cpt</span><span class="o">.</span><span class="n">cpt_class</span><span class="p">)</span>
+    <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;quality_class&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">gef_cpt</span><span class="o">.</span><span class="n">cpt_class</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;predrilled_depth&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">gef_cpt</span><span class="o">.</span><span class="n">pre_excavated_depth</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;final_depth&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">gef_cpt</span><span class="o">.</span><span class="n">end_depth_of_penetration_test</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;cpt_description&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="s2">&quot;&quot;</span>
