--- a/_modules/pygef/shim.html
+++ b/_modules/pygef/shim.html
@@ -83,7 +83,7 @@
 <span class="kn">from</span><span class="w"> </span><span class="nn">pygef.bore</span><span class="w"> </span><span class="kn">import</span> <span class="n">BoreData</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">pygef.broxml.parse_bore</span><span class="w"> </span><span class="kn">import</span> <span class="n">read_bore</span> <span class="k">as</span> <span class="n">read_bore_xml</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">pygef.broxml.parse_cpt</span><span class="w"> </span><span class="kn">import</span> <span class="n">read_cpt</span> <span class="k">as</span> <span class="n">read_cpt_xml</span>
-<span class="kn">from</span><span class="w"> </span><span class="nn">pygef.common</span><span class="w"> </span><span class="kn">import</span> <span class="n">Location</span><span class="p">,</span> <span class="n">VerticalDatumClass</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">pygef.common</span><span class="w"> </span><span class="kn">import</span> <span class="n">Location</span><span class="p">,</span> <span class="n">VerticalDatumClass</span><span class="p">,</span> <span class="n">convert_coordinate_system_to_gml</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">pygef.cpt</span><span class="w"> </span><span class="kn">import</span> <span class="n">CPTData</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">pygef.gef.parse_bore</span><span class="w"> </span><span class="kn">import</span> <span class="n">_GefBore</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">pygef.gef.parse_cpt</span><span class="w"> </span><span class="kn">import</span> <span class="n">_GefCpt</span>
@@ -178,7 +178,7 @@
 
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;delivered_location&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">Location</span><span class="p">(</span>
         <span class="c1"># all gef files are RD new</span>
-        <span class="n">srs_name</span><span class="o">=</span><span class="s2">&quot;urn:ogc:def:crs:EPSG::28992&quot;</span><span class="p">,</span>
+        <span class="n">srs_name</span><span class="o">=</span><span class="n">convert_coordinate_system_to_gml</span><span class="p">(</span><span class="n">gef_cpt</span><span class="o">.</span><span class="n">coordinate_system</span><span class="p">),</span>
         <span class="n">x</span><span class="o">=</span><span class="n">gef_cpt</span><span class="o">.</span><span class="n">x</span><span class="p">,</span>
         <span class="n">y</span><span class="o">=</span><span class="n">gef_cpt</span><span class="o">.</span><span class="n">y</span><span class="p">,</span>
     <span class="p">)</span>
@@ -266,7 +266,7 @@
 
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;delivered_location&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">Location</span><span class="p">(</span>
         <span class="c1"># all gef files are RD new</span>
-        <span class="n">srs_name</span><span class="o">=</span><span class="s2">&quot;urn:ogc:def:crs:EPSG::28992&quot;</span><span class="p">,</span>
+        <span class="n">srs_name</span><span class="o">=</span><span class="n">convert_coordinate_system_to_gml</span><span class="p">(</span><span class="n">gef_bore</span><span class="o">.</span><span class="n">coordinate_system</span><span class="p">),</span>
         <span class="n">x</span><span class="o">=</span><span class="n">gef_bore</span><span class="o">.</span><span class="n">x</span><span class="p">,</span>
         <span class="n">y</span><span class="o">=</span><span class="n">gef_bore</span><span class="o">.</span><span class="n">y</span><span class="p">,</span>
     <span class="p">)</span>
