--- a/_modules/pygef/shim.html
+++ b/_modules/pygef/shim.html
@@ -170,7 +170,7 @@
     <span class="k">if</span> <span class="n">height_system</span> <span class="o">==</span> <span class="mf">31000.0</span><span class="p">:</span>
         <span class="k">return</span> <span class="s2">&quot;nap&quot;</span>
     <span class="k">else</span><span class="p">:</span>
-        <span class="k">return</span> <span class="nb">str</span><span class="p">(</span><span class="nb">int</span><span class="p">(</span><span class="n">height_system</span><span class="p">))</span>
+        <span class="k">return</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="nb">int</span><span class="p">(</span><span class="n">height_system</span><span class="p">)</span><span class="si">:</span><span class="s2">05d</span><span class="si">}</span><span class="s2">&quot;</span>
 
 
 <span class="k">def</span><span class="w"> </span><span class="nf">gef_cpt_to_cpt_data</span><span class="p">(</span><span class="n">gef_cpt</span><span class="p">:</span> <span class="n">_GefCpt</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">CPTData</span><span class="p">:</span>
@@ -252,7 +252,7 @@
     <span class="p">)</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;delivered_vertical_position_offset&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">gef_cpt</span><span class="o">.</span><span class="n">zid</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;delivered_vertical_position_datum&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">VerticalDatumClass</span><span class="p">(</span>
-        <span class="nb">str</span><span class="p">(</span><span class="nb">int</span><span class="p">(</span><span class="n">gef_cpt</span><span class="o">.</span><span class="n">height_system</span><span class="p">))</span>
+        <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="nb">int</span><span class="p">(</span><span class="n">gef_cpt</span><span class="o">.</span><span class="n">height_system</span><span class="p">)</span><span class="si">:</span><span class="s2">05d</span><span class="si">}</span><span class="s2">&quot;</span>
     <span class="p">)</span>
 
     <span class="c1"># TODO! parse measurementtext 9 in gef?</span>
